Closed Bug 372322 Opened 17 years ago Closed 17 years ago

Attachments dropped into the wrong folder when using Drag and Drop

Categories

(Thunderbird :: Mail Window Front End, defect)

PowerPC
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird2.0

People

(Reporter: mscott, Assigned: mscott)

References

Details

(Keywords: verified1.8.1.3)

Attachments

(1 file)

On the Mac. Trunk and Branch.

Drag an attachment to a folder in Finder.

Notice that the attachment is always dropped in the parent folder of the one you chose. 

nsMessenger::SaveAttachmentToFolder is using nsIFileSpect::SetLeafName which is replacing the last folder in the path name with the name of the attachment.
Attached patch the fixSplinter Review
The old code would take a destination folder of C:\temp and a file name of Foo.doc and end up saving the attachment to: c:\foo.doc instead of c:\temp\foo.doc due to the way we were setting the leaf name on the file spec.

Fix this by using nsIFile::AppendNative to append the native encoded attachment file name to the destination folder instead of nsIFileSpec::SetLeafName. 

I did some additional cleanup while I was here, cloning the destFolder argument, appending the native file name to the clone and then returning the clone as the out parameter instead of converting through nsIFileSpec.
Comment on attachment 256971 [details] [diff] [review]
the fix

I've verified this works on the Mac too. See the previous comment for a description of the patch.
Attachment #256971 - Flags: superreview?(bienvenu)
so.... *not* Mac-only, per comment 1?  Fix in Core or TB only?

Bug 252479 another likely dupe.
No, *this* bug is the dupe.  Bug 252479 was opened almost two years ago.
Attachment #256971 - Flags: superreview?(bienvenu) → superreview+
Fixed branch and trunk. Mike, the symptom was Mac only, that was the only platform that showed the problem although the change was to core. Due to differences and the underlying d+d implementations that I didn't have time to look into, on Windows we were dropping the file to the user's temporary directory and from there it gets copied into the real destination. With this bug, the file was first getting copied to one level above the temp directory and then moved to the right location. On the mac, the file is getting dropped directly in the final destination, hence the user saw the file getting dropped a directory above where it should. 
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: fixed1.8.1.3
Resolution: --- → FIXED
verified fixed on the 1.8 branch on an Intel Mac running 10.4.9, using the Tbird cand build version 2.0.0.0 (20070326). I tried several drag and drop scenarios with attachments and all worked well. Adding branch verified keyword.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: