Bug #372322 --> Attachments dropped into the wrong folder when using Drag and Drop on Mac OS X.

sr=bienvenu